force-app/main/default/objects/Account/fields/Priority_Rationale_Detail__c.field-meta.xml
<CustomField>
    <fullName>Priority_Rationale_Detail__c</fullName>
    <label>우선순위 사유 상세</label>
    <description>이 Account의 우선순위 점수 근거를 재무·시그널 수치로 설명하는 상세 서술. Account_Priority_Rationale 프롬프트 템플릿의 상세 출력을 AccountRationaleQueueable가 매일 저장한다. Account 상세 화면용.</description>
    <inlineHelpText>AI가 생성한 우선순위 근거 상세 설명입니다. 매일 오전 6시 자동 갱신됩니다.</inlineHelpText>
    <type>LongTextArea</type>
    <length>2000</length>
</CustomField>