force-app/main/default/objects/Account/fields/Priority_Rationale_Summary__c.field-meta.xml
<CustomField>
    <fullName>Priority_Rationale_Summary__c</fullName>
    <description>이 Account가 왜 상위 우선순위인지에 대한 한 줄 사유. Account_Priority_Rationale 프롬프트 템플릿의 요약 출력을 AccountRationaleQueueable가 매일 저장한다. 홈 Top3 카드용.</description>
    <inlineHelpText>AI가 생성한 우선순위 근거 한 줄 요약입니다. 매일 오전 6시 자동 갱신됩니다.</inlineHelpText>
    <label>우선순위 사유 요약</label>
    <length>255</length>
    <type>Text</type>
</CustomField>