force-app/main/default/objects/Account/fields/Priority_Score__c.field-meta.xml
<CustomField>
    <fullName>Priority_Score__c</fullName>
    <description>계정 우선순위 산정 점수. 03단계 Flow가 값을 기록하고 02단계 홈 LWC 정렬 키로 사용된다.</description>
    <inlineHelpText>0~999 범위의 정수로 계정 우선순위를 나타냅니다. 값이 클수록 우선순위가 높습니다.</inlineHelpText>
    <label>우선순위 점수</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>